<resources>
    <string name="app_name">PurrfectMatchMobileApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetingDashboard">Hi, Ali</string>
    <string name="descriptionDashboard">Find Your Favorites\nHere!</string>
    <string name="searchBarHintDashboard">Search...</string>
    <string name="dogsDashboard">Dogs</string>
    <string name="catsDashboard">Cats</string>
    <string name="othersDashboard">Others</string>
    <string name="trendDashboard">Trend</string>
    <string name="view_allDashboard">View All</string>
    <string name="descriptionFilterPets">Find Your Favorite\nPet!</string>
    <string name="searchBarHintFilterPets">Search for Pets</string>
    <string name="categoriesFilterPets">Categories</string>
    <string name="dogsFilterPets">Dogs</string>
    <string name="catsFilterPets">Cats</string>
    <string name="othersFilterPets">Others</string>
    <string name="welcomeLogin">Welcome</string>
    <string name="textLogin">Please login with your information</string>
    <string name="email_addressLogin">Email Address</string>
    <string name="passwordLogin">Password</string>
    <string name="don_t_have_an_accountLogin">Don\'t have an account</string>
    <string name="i_forgot_my_passwordLogin">I forgot my password</string>
    <string name="loginbtnTextLogin">Login</string>
    <string name="or_login_withLogin">Or Login with</string>
    <string name="profileTextProfile">Profile</string>
    <string name="nameProfile">AliAwela</string>
    <string name="emailProfile">ali123awela@gmail.com</string>
    <string name="notificationProfile">Notification</string>
    <string name="calenderProfile">Calender</string>
    <string name="galleryProfile">Gallery</string>
    <string name="my_favoriteProfile">My Favorite</string>
    <string name="shareProfile">Share</string>
    <string name="logoutProfile">Logout</string>
    <string name="settingsTextSettings">Settings</string>
    <string name="nameSettings">Ali Awela</string>
    <string name="phoneNbSettings">+961 71 274 903</string>
    <string name="edit_profileBtnSettings">Edit Profile</string>
    <string name="night_modeSettings">Night Mode</string>
    <string name="notificationsSettings">Notifications</string>
    <string name="languagesSettings">Languages</string>
    <string name="about_usSettings">About Us</string>
    <string name="sign_inSettings">Sign In</string>
    <string name="sign_upSettings">Sign Up</string>
    <string name="logoutSettings">Logout</string>
    <string name="welcomeSignup">Welcome</string>
    <string name="registerTextSignup">Please register with your information</string>
    <string name="usernameSignup">Username</string>
    <string name="email_addressSignup">Email Address</string>
    <string name="passwordSignup">Password</string>
    <string name="already_have_an_accountSignup">Already have an account</string>
    <string name="registerLinkSignup">Register</string>


    <!--FireBase-->
    <string name="client_id">723960825861-lpq8b9ul5p3opgga3652oiud2afvdtmt.apps.googleusercontent.com</string>
    <string name="allFilterPet">All</string>
    <string name="support_emailAboutUs">Support Email</string>
    <string name="supportAboutUs">support@purrfectmatch.com</string>
    <string name="supportTextAboutUs">If you need any assistance or have any questions about PurrfectMatch. We\'re here to help! Thank you for choosing PurrfectMatch to find your perfect pet companion. Happy adopting! 🐾</string>
    <string name="supportWordAboutUs">Support</string>
    <string name="DefAboutUs">Welcome to PurrfectMatch - your go-to solution for finding your perfect furry companion! Whether you\'re looking for a cuddly kitten, a playful puppy, or a loyal senior pet, PurrfectMatch has you covered. Our app connects pet lovers with their ideal companions from shelters and rescues around the world.</string>
    <string name="purrfect_matchAboutUs">Purrfect Match</string>
    <string name="about_usAboutUs">About us</string>


</resources>